--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -87,7 +87,7 @@
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'history:dashboard' %}"> {{user.username}} </a>
+                        <a class="nav-link" href="{% url 'history:dashboard' %}"> {{user.username}}'s Dashboard </a>
                     </li>
                 {% else %}
                     <li class="nav-item">
