--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -141,7 +141,7 @@
     </div>
 </main>
 
-<footer class="footer">
+<footer class="footer text-center fixed bottom">
     <div class="container">
         <div class="text-center p-3">
             CS3240 Team A22
