--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -127,7 +127,7 @@
     </div>
 </main>
 
-<footer class="footer text-center fixed bottom">
+<footer class="footer text-center fixed-bottom">
     <div class="container">
         <div class="text-center p-3">
             CS3240 Team A22
