Fixing footer again

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -127,15 +127,14 @@
     </div>
 </main>
 
-<footer class="footer text-center fixed-bottom">
-    <div class="container">
+<footer class="text-center text-lg-start fixed-bottom">
         <div class="text-center p-3">
-            CS3240 Team A22
+            <a class ="text-body"> CS3240 Team A22
             This system is a class project and is not monitored. Please do not submit real information.
             If you need to report an honor offense, please visit <a href="https://honor.virginia.edu/contact">UVA Honor
             Reporting Page</a>.
+            </a>
         </div>
-    </div>
 </footer>
 
 <!-- Bootstrap core JavaScript
