Fixing footer bringing back color

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -127,7 +127,7 @@
     </div>
 </main>
 
-<footer class="text-center text-lg-start fixed-bottom">
+<footer class="footer text-center fixed-bottom">
         <div class="text-center p-3">
             <a class ="text-body"> CS3240 Team A22
             This system is a class project and is not monitored. Please do not submit real information.
