--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -30,6 +30,7 @@
                             name="incident_date"
                             class="form-control"
                             required
+                            max="<?php echo date('Y-m-d'); ?>" <!-- Setting max attribute to today's date -->
                     />
                 </div>
                 <div class="form-group">
