--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -30,7 +30,7 @@
                             name="incident_date"
                             class="form-control"
                             required
-                            max="<?php echo date('Y-m-d'); ?>"
+                            max=""
                     />
                 </div>
                 <div class="form-group">
@@ -102,5 +102,8 @@
 
         </form>
     </div>
+<script>
+    document.getElementById('date').max = new Date().toISOString().split('T')[0];
+</script>
 {% endblock %}
 
