--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -127,7 +127,7 @@
     </div>
 </main>
 
-<footer class="footer text-center fixed-bottom">
+<footer class="footer">
         <div class="text-center p-3">
             CS3240 Team A22
             This system is a class project and is not monitored. Please do not submit real information.
