--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     <label for="incident_category" >
                         Incident Category:
-                        <i class="fas fa-question-circle" data-toggle="tooltip" title="Explanation of incident categories"></i>
+                        <i class="fas fa-question-circle" data-toggle="tooltip" title="Please select the category that best describes the incident. For more information, please refer to the 'Incident Categories' tab."></i>
                     </label>
                     <select id="incident_category" name="incident_category" class="form-control" required>
                         <option value="">Select</option>
