Case id hash is too ambiguous change to case ID

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -8,7 +8,7 @@
 <table class="table table-hover table-responsive">
   <thead class="table-dark">
     <tr>
-      <th scope="col">Report Hash</th>
+      <th scope="col">Case ID</th>
       <th scope="col">Submitted By</th>
       <th scope="col">Status</th>
       <th scope="col">Date</th>
