--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -3,7 +3,7 @@
 {% block main %}
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
-            <h4 class="pb-1">To access details to any report that you have submitted while logged in to your account or anonymously, please input the Case ID hash that was displayed after you submitted the report.</h4>
+            <h4 class="pb-1">To access details to any report that you have submitted while logged in to your account or anonymously, please input the Case ID that was displayed after you submitted the report.</h4>
             <form method="post">
                 {% csrf_token %}
                 <div class="mb-3">
