updated button coloring for visual consistency

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -42,7 +42,7 @@
                     {#                       style="color: white; min-width: 200px;">Sign in with Google</a>#}
                     <div class="d-flex align-items-center">
                         <!-- Icon with a right margin -->
-                        <a href="{% provider_login_url 'google' %}" class="btn btn-secondary"
+                        <a href="{% provider_login_url 'google' %}" class="btn btn-primary"
                            style="color: white; min-width: 200px;">
                             <img src="../../static/login/images/google.svg" alt="google" width="20"
                                  style="margin-right: 10px;">
