added site name after page specific name for consistencyin html titles

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Login Page{% endblock %}
+{% block title %}Login | Hoos Reporting Honor{% endblock %}
 
 {% block banner %}
     <div class="text-center mb-0" style="background-color: #f66733; padding: 25px; width: 100%;">
