--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Home | Hoos Reporting Honor{% endblock %}
 {% block header %}
     <link href="../../static/shared/home-features.css" rel="stylesheet">
 {% endblock %}
