--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Report Submission{% endblock %}
+{% block title %}Report Submission | Hoos Reporting Honor{% endblock %}
 {% block header %}
     <link href="../../static/submit/submission-features.css" rel="stylesheet">
 {% endblock %}
