--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Submission Complete{% endblock %}
+{% block title %}Submission Complete | Hoos Reporting Honor{% endblock %}
 
 {% block header %}
     <link href="../../static/submit/submission-features.css" rel="stylesheet">
