--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -17,7 +17,12 @@
     <p style="margin-bottom: 0;">Case ID: <span id="caseID">{{ case_hash }}</span></p>
     <button onclick="copyCaseID()" class="copy-btn" style="margin-left: 10px;">Copy</button>
 </div>
-<p>Please save this Case ID if you want to check the status of your report later.</p>
+
+{% if user.is_authenticated %}
+    <p>Please save this Case ID if you want to check the status of your report later without logging in using our case lookup feature on the home page. Also, since you are currently logged in, then you may also access all of your reports while logged in on your personal dashboard by clicking {{ user.get_username }}'s dashboard in the top right of the site.</p>
+{% else %}
+    <p>Please save this Case ID if you want to check the status of your report later using our case lookup feature on the home page as this will be your only way to review the report status and details as an anonymous user.</p>
+{% endif %}
 
 <div class="container">
     <p>Return to <a href="{% url 'shared:home' %}">home</a>.</p>
@@ -25,6 +30,12 @@
 {% endblock %}
 
 {% block extra_js %}
+/***************
+    * REFERENCES
+    * AI Agent: ChatGPT4
+    * Date: 2024-4-14
+    * Prompt: "how can I create a copy button for my django project that copies a case hash that is accessed through a session data case id and displays responsive feedback to the user?"
+***************/
 <script>
     function copyCaseID() {
         var copyText = document.getElementById("caseID");
