--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Login Page{% endblock %}
+{% block title %}Login | Hoos Reporting Honor{% endblock %}
 
 {% block banner %}
     <div class="text-center mb-0" style="background-color: #f66733; padding: 25px; width: 100%;">
@@ -42,7 +42,7 @@
                     {#                       style="color: white; min-width: 200px;">Sign in with Google</a>#}
                     <div class="d-flex align-items-center">
                         <!-- Icon with a right margin -->
-                        <a href="{% provider_login_url 'google' %}" class="btn btn-secondary"
+                        <a href="{% provider_login_url 'google' %}" class="btn btn-primary"
                            style="color: white; min-width: 200px;">
                             <img src="../../static/login/images/google.svg" alt="google" width="20"
                                  style="margin-right: 10px;">
