--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Home | Hoos Reporting Honor{% endblock %}
 {% block header %}
     <link href="../../static/shared/home-features.css" rel="stylesheet">
 {% endblock %}
@@ -19,7 +19,7 @@
             <div class="col-md-3">
                 <a href="https://honor.virginia.edu/" class="btn-custom">
                     <i class="fas fa-book fa-3x button-icon"></i>
-                    <span>Understand The Code</span>
+                    <span>About The Honor Code</span>
                 </a>
             </div>
             <div class="col-md-3">
