--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -17,8 +17,8 @@
     Anonymous
 {% endif %}
 </p>
-<p><span class="label-bold">Submission Date:</span> {{ report.submission_date }}</p>
-<p><span class="label-bold">Edit Date:</span> {{ report.edit_date }}</p>
+<p><span class="label-bold">Submission Date ():</span> {{ report.submission_date }}</p>
+<p><span class="label-bold">Edit Date ():</span> {{ report.edit_date }}</p>
 <p><span class="label-bold">Status:</span> {{ report.status }}</p>
 
 <h3><span class="label-bold">Incident Details</span></h3>
