corrected html for clarity

--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -75,7 +75,7 @@
 </ul>
 
 <h3><span class="label-bold">Admin Feedback</span></h3>
-<p><span class="label-bold">Admin Notes:</span> {% if report.report_text %}{{ report.report_text }}{% else %}No feedback{% endif %}</p>
+<p><span class="label-bold">Save Admin Notes:</span> {% if report.report_text %}{{ report.report_text }}{% else %}No feedback{% endif %}</p>
 
 {% if user.profile.is_admin %}
 <div>
