--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -197,7 +197,7 @@
         return csrfToken ? csrfToken.split('=')[1] : null;
     }
     function sendTimezoneToServer(timezone) {
-        fetch('/set_timezone/', {
+        fetch('/history/set_timezone/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/x-www-form-urlencoded;',
