updated title for other pages for improved consistency

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "submit/base.html" %} 
 {% load static %}
 
+{% block title %}Reports Dashboard | Hoos Reporting Honor{% endblock %}
 
 {% block main %}
 <h1>Completed Reports</h1>
