--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Lookup{% endblock %}
+{% block title %}Lookup | Hoos Reporting Honor{% endblock %}
 {% block main %}
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
