--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Report{% endblock%}
+{% block title %}Report Details | Hoos Reporting Honor{% endblock%}
 
 {% block extra_css %}
   <link href="../../static/history/report-detail-labels.css" rel="stylesheet">
