Beta updates timezone (#68)
* updates html text for clarity

* updated button coloring for visual consistency

* added site name after page specific name for consistencyin html titles

* updated displayed user message to be conditionally rendered for logged in vs anonymous users for more concise UX

* updated submission complete feedback to include specific name for case lookup feature to reduce user ambiguity

* added corrected local timezone format for user

* added JS logic to access timezone from client side for browser

* corrected html for clarity

* adjusted structure of timezone implementation

* added project specific routing to javascript timezone fetch

* added debugging statements

* updated debugging logging

* updated title for other pages for improved consistency

* added debugging for edit_submission saving

* added debugging for edit_submission saving

* added debugging for edit_submission saving

* added debugging for edit_submission saving

* removed debuggin logging

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -1,6 +1,7 @@
 {% extends "submit/base.html" %} 
 {% load static %}
 
+{% block title %}Reports Dashboard | Hoos Reporting Honor{% endblock %}
 
 {% block main %}
 <h1>Completed Reports</h1>
@@ -11,7 +12,7 @@
       <th scope="col">Case ID</th>
       <th scope="col">Submitted By</th>
       <th scope="col">Status</th>
-      <th scope="col">Date</th>
+      <th scope="col">Date ({{current_timezone}})</th>
       <th scope="col">Files</th>
     </tr>
   </thead>
@@ -29,7 +30,7 @@
         {% endif %}
       </td>
       <td>{{ report.status }}</td>
-        <td>{{ report.submission_date }}</td>
+      <td>{{ report.submission_date }}</td>
       <td>
         <form method="POST" action="{% url 'history:report' %}">
           {% csrf_token %}
