--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -1,150 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
+  <head>
+    <meta charset="UTF-8" />
     <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>{% block title %}{% endblock %}</title>
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% block header %}
-        <!-- add any links/css files here -->
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {%
+    block header %}
+    <!-- add any links/css files here -->
     {% endblock %}
 
-    <link href="../../static/submit/sticky-footer-navbar.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link
+      href="../../static/submit/sticky-footer-navbar.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-    
+    {% block extra_css %}{% endblock %} {% block extra_js %}{% endblock %}
+  </head>
 
-    {% block extra_css %}{% endblock %}
-    {% block extra_js %}{% endblock %}
-</head>
-
-<body>
-<header>
-    <div class="top-strip"></div>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
+  <body>
+    <header>
+      <div class="top-strip"></div>
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
         <a class="navbar-brand ps-4" href="{% url 'shared:home' %}">
-            <img src="../../static/submit/images/uva-logo.svg" alt="UVA Logo" width="200"
-                 class="d-inline-block align-text-top">
-            Hoos Reporting Honor
+          <img
+            src="../../static/submit/images/uva-logo.svg"
+            alt="UVA Logo"
+            width="200"
+            class="d-inline-block align-text-top"
+          />
+          Hoos Reporting Honor
         </a>
         <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="https://honor.virginia.edu/"
-                    >Honor Code<span class="sr-only">(current)</span></a
-                    >
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'shared:home' %}"
+                >Home<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="https://honor.virginia.edu/"
+                >Honor Code<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'submit:incident_categories' %}"
+                >Incident Categories<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Reports
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'submit:start_submission' %}"
+                    >Make a Report</a
+                  >
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'submit:incident_categories' %}">Incident Categories<span
-                            class="sr-only">(current)</span></a>
+                <li>
+                  <a class="dropdown-item" href="{% url 'history:lookup' %}"
+                    >Find Report</a
+                  >
                 </li>
-                <li class="nav-item dropdown">
-                    <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="navbarDropdown"
-                            role="button"
-                            data-bs-toggle="dropdown"
-                            aria-expanded="false"
-                    >
-                        Reports
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li>
-                            <a class="dropdown-item" href="{% url 'submit:start_submission' %}">Make a Report</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'history:lookup' %}">Find Report</a
-                            >
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- Sign in/Dashboard button -->
-            <ul class="navbar-nav ms-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'history:dashboard' %}"> {{user.username}}'s Dashboard </a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login:login_view' %}">Sign In</a>
-                    </li>
-                {% endif %}
+              </ul>
+            </li>
+          </ul>
+          <!-- Sign in/Dashboard button -->
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'history:dashboard' %}">
+                {{user.username}}'s Dashboard
+              </a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login:login_view' %}"
+                >Sign In</a
+              >
+            </li>
+            {% endif %}
             <!-- Sign out button -->
-                {% if user.is_authenticated %}
-                    <form class="form-inline my-2 my-lg-0" action="{% url 'account_logout' %}" method="post">
-                        {% csrf_token %}
-                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Sign Out</button>
-                    </form>
-                {% endif %}
-            </ul>
-
+            {% if user.is_authenticated %}
+            <form
+              class="form-inline my-2 my-lg-0"
+              action="{% url 'account_logout' %}"
+              method="post"
+            >
+              {% csrf_token %}
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+                Sign Out
+              </button>
+            </form>
+            {% endif %}
+          </ul>
         </div>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<!-- Begin page content -->
-<main role="main">
-    {% block banner %}
-        <!-- trying to put banner here :( -->
-    {% endblock %}
-    <div class="container">
+    <!-- Begin page content -->
+    <main role="main">
+      {% block banner %}
+      <!-- trying to put banner here :( -->
+      {% endblock %}
+      <div class="container">
         <!-- Display messages -->
         {% if messages %}
-            <div class="container mt-3">
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% block main %}
-            <!-- actual submission content -->
-        {% endblock %}
-    </div>
-</main>
-
-<footer class="footer">
-        <div class="text-center p-3">
-            CS3240 Team A22
-            This system is a class project and is not monitored. Please do not submit real information.
-            If you need to report an honor offense, please visit <a href="https://honor.virginia.edu/contact">UVA Honor
-            Reporting Page</a>.
+        <div class="container mt-3">
+          {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+          {% endfor %}
         </div>
-</footer>
+        {% endif %} {% block main %}
+        <!-- actual submission content -->
+        {% endblock %}
+      </div>
+    </main>
 
-<!-- Bootstrap core JavaScript
+    <footer class="footer">
+      <div class="text-center p-3">
+        CS3240 Team A22 This system is a class project and is not monitored.
+        Please do not submit real information. If you need to report an honor
+        offense, please visit
+        <a href="https://honor.virginia.edu/contact">UVA Honor Reporting Page</a
+        >.
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
 ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<!-- <script
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"
 ></script> -->
-<!-- <script
+    <!-- <script
         src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"
@@ -154,42 +183,42 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"
 ></script> -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- * REFERENCES
+    <!-- * REFERENCES
     * AI Agent: ChatGPT4
     * Date: 2024-4-25
     * Prompt: "how can I access a user's local timezone without manually prompting them for it in a Django project and send it to the server for processing and displaying a datetime?"
   -->
-    
-<script> 
-    document.addEventListener('DOMContentLoaded', function() {
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
         var timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
         console.log("Detected Timezone:", timezone); // For debugging
         sendTimezoneToServer(timezone);
-    });
+      });
 
-    function getCSRFToken() {
-        const csrfToken = document.cookie.split('; ').find(row => row.startsWith('csrftoken='));
-        return csrfToken ? csrfToken.split('=')[1] : null;
-    }
-    function sendTimezoneToServer(timezone) {
-        fetch('/history/set_timezone/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded;',
-                'X-CSRFToken': getCSRFToken()  // Add CSRF token to request headers
-            },
-            body: 'timezone=' + encodeURIComponent(timezone)
+      function getCSRFToken() {
+        const csrfToken = document.cookie
+          .split("; ")
+          .find((row) => row.startsWith("csrftoken="));
+        return csrfToken ? csrfToken.split("=")[1] : null;
+      }
+      function sendTimezoneToServer(timezone) {
+        fetch("/history/set_timezone/", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded;",
+            "X-CSRFToken": getCSRFToken(), // Add CSRF token to request headers
+          },
+          body: "timezone=" + encodeURIComponent(timezone),
         })
-        .then(response => response.text())
-        .then(data => console.log('Timezone set successfully:', data))
-        .catch(error => console.error('Error setting timezone:', error));
-    }
-</script>
-</body>
+          .then((response) => response.text())
+          .then((data) => console.log("Timezone set successfully:", data))
+          .catch((error) => console.error("Error setting timezone:", error));
+      }
+    </script>
+  </body>
 </html>
