tests running locally, should pass on github ci now

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -9,10 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>{% block title %}{% endblock %}</title>
-    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {%
-    block header %}
-    <!-- add any links/css files here -->
-    {% endblock %}
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
 
     <link
       href="../../static/submit/sticky-footer-navbar.css"
