--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block banner %}
     <div class="banner">
-        <div class="overlay d-flex justify-content-center align-items-center">
+        <div class="overlay d-flex justify-content-center align-items-center pr-1 container-with-padding">
             <h1 class="text-white text-center">Welcome to Hoos Reporting Honor!</h1>
             <h6 class="text-white text-center pr-1">Worried about an honor code violation? Want to report it? Make an anonymous submission or sign in to keep
                 track of all of your reports. You can also find the status of specific reports even without being signed
