added new implementation for displaying dates in localtime

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -30,7 +30,11 @@
         {% endif %}
       </td>
       <td>{{ report.status }}</td>
-      <td>{{ report.submission_date }}</td>
+      <td>
+        {% localtime %}
+        {{ report.submission_date }}
+        {% endlocaltime %}
+      </td>
       <td>
         <form method="POST" action="{% url 'history:report' %}">
           {% csrf_token %}
