readded timezone middleware setting

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -30,11 +30,7 @@
         {% endif %}
       </td>
       <td>{{ report.status }}</td>
-      <td>
-        {% localtime %}
-        {{ report.submission_date }}
-        {% endlocaltime %}
-      </td>
+      <td>{{ report.submission_date }}</td>
       <td>
         <form method="POST" action="{% url 'history:report' %}">
           {% csrf_token %}
