added home button and more tests

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -9,8 +9,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>{% block title %}{% endblock %}</title>
-    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
-      {%block header %}
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {%block
+    header %}
     <!-- add any links/css files here -->
     {% endblock %}
 
@@ -61,6 +61,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'shared:home' %}"
+                >Home<span class="sr-only">(current)</span></a
+              >
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="https://honor.virginia.edu/"
                 >Honor Code<span class="sr-only">(current)</span></a
