--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -9,8 +9,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>{% block title %}{% endblock %}</title>
-    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {%block
-    header %}
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} 
+    {%block header %}
     <!-- add any links/css files here -->
     {% endblock %}
 
