--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -3,11 +3,12 @@
 {% block main %}
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
-            <h4 class="pb-1">To access details to any report that you have submitted while logged in to your account or anonymously, please input the Case ID that was displayed after you submitted the report.</h4>
+            <h4 class="pb-1">To access details to any report that you have submitted while logged in to your account or
+                anonymously, please input the Case ID that was displayed after you submitted the report.</h4>
             <form method="post">
                 {% csrf_token %}
                 <div class="mb-3">
-                    {{ form.report_hash}}
+                    {{ form.report_hash }}
                     {% if form.report_hash.errors %}
                         <div class="alert alert-danger">
                             {{ form.report_hash.errors }}
