--- a/shared/static/shared/home-features.css
+++ b/shared/static/shared/home-features.css
@@ -1,23 +1,3 @@
-/*.card.h-100 {*/
-/*    border-radius: 10px; !* Rounded corners *!*/
-/*    overflow: hidden; !* Ensures nothing spills out of the card *!*/
-/*    position: relative;*/
-/*    padding-bottom: 100%; !* This maintains a 1:1 aspect ratio *!*/
-/*    height: 0; !* Allows padding-bottom to take over height *!*/
-/*}*/
-
-/*.card-body {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
-
 .btn-custom {
   display: inline-flex;
   flex-direction: column;
@@ -67,5 +47,5 @@
 }
 
 .container-with-padding {
-    padding: 0 10px; /* Adjust the padding as needed */
+    padding: 0 25px;
 }
