--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -7,7 +7,8 @@
     <div class="banner">
         <div class="overlay d-flex justify-content-center align-items-center pr-1 container-with-padding">
             <h1 class="text-white text-center">Welcome to Hoos Reporting Honor!</h1>
-            <h6 class="text-white text-center pr-1">Worried about an honor code violation? Want to report it? Make an anonymous submission or sign in to keep
+            <h6 class="text-white text-center pr-1">Worried about an honor code violation? Want to report it? Make an
+                anonymous submission or sign in to keep
                 track of all of your reports. You can also find the status of specific reports even without being signed
                 in using our Case ID system.</h6>
         </div>
@@ -36,7 +37,7 @@
             </div>
             <div class="col-md-3">
 
-                    {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                     <form action="{% url 'account_logout' %}" method="post">
                         <button type="submit" class="btn-custom">
                             {% csrf_token %}
@@ -44,60 +45,15 @@
                             <span>Sign Out</span>
                         </button>
                     </form>
-                    {% else %}
+                {% else %}
                     <a href="/login" class="btn-custom">
                         <i class="fas fa-sign-in-alt fa-3x"></i>
                         <span>Sign In</span>
                     </a>
-                    {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
-
-{#    <div class="container my-5">#}
-{#        <div class="row">#}
-{#            <div class="col-sm-6 col-lg-3 mb-4">#}
-{#                <div class="card h-100">#}
-{#                    <div class="card-body text-center">#}
-{#                        <i class="fas fa-book fa-3x"></i> <!-- Icon for 'Understand The Code' -->#}
-{#                        <h5 class="card-title">#}
-{#                            <a href="https://honor.virginia.edu/">Understand The Code</a>#}
-{#                        </h5>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-sm-6 col-lg-3 mb-4">#}
-{#                <div class="card h-100">#}
-{#                    <div class="card-body text-center">#}
-{#                        <i class="fas fa-search fa-3x"></i> <!-- Icon for 'Find Your Reports' -->#}
-{#                        <h5 class="card-title">#}
-{#                            <a href="/history/lookup">Find Your Reports</a>#}
-{#                        </h5>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-sm-6 col-lg-3 mb-4">#}
-{#                <div class="card h-100">#}
-{#                    <div class="card-body text-center">#}
-{#                        <i class="fas fa-file-alt fa-3x"></i> <!-- Icon for 'Submit a Report' -->#}
-{#                        <h5 class="card-title">#}
-{#                            <a href="/submit">Submit a Report</a>#}
-{#                        </h5>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-sm-6 col-lg-3 mb-4">#}
-{#                <div class="card h-100">#}
-{#                    <div class="card-body text-center">#}
-{#                        <i class="fas fa-sign-in-alt fa-3x"></i> <!-- Icon for 'Sign In' -->#}
-{#                        <h5 class="card-title">#}
-{#                            <a href="/login">Sign In</a>#}
-{#                        </h5>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
     <div class="jumbotron text-center mt-4">
         <h4>Questions?</h4>
         <p>Contact us at <a href="mailto:honor@virginia.edu">honor@virginia.edu</a></p>
